[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/GUI/TurnStats/TurnName.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/Grey.tres" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Gotham_20.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/GUI/TurnStats/StatCarbon.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/TurnStats/StatEnergy.gd" type="Script" id=5]
[ext_resource path="res://assets/GUI/TurnStats/StatWater.gd" type="Script" id=6]
[ext_resource path="res://assets/GUI/TurnStats/StatVibrancy.gd" type="Script" id=7]
[ext_resource path="res://assets/GUI/TurnStats/StatFood.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/Gotham_16.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/GUI/TurnStats/TurnStats.gd" type="Script" id=10]

[node name="TurnStats" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 10 )

[node name="N" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="N"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0

[node name="V" type="VBoxContainer" parent="N/M"]
margin_right = 900.0
margin_bottom = 560.0
custom_constants/separation = 20

[node name="H1" type="HBoxContainer" parent="N/M/V"]
margin_right = 900.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="LMargin" type="Control" parent="N/M/V/H1"]
margin_right = 246.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="TurnName" type="Label" parent="N/M/V/H1"]
margin_left = 250.0
margin_top = 12.0
margin_right = 650.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
script = ExtResource( 1 )

[node name="RMargin" type="Control" parent="N/M/V/H1"]
margin_left = 654.0
margin_right = 900.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="StatCarbon" type="Label" parent="N/M/V"]
margin_top = 95.0
margin_right = 900.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 0.486275, 0.988235, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Your total carbon cost for the year 2024 is kgCO2eq. Try harder and work towards carbon net-zero!"
autowrap = true
script = ExtResource( 4 )

[node name="StatEnergy" type="Label" parent="N/M/V"]
margin_top = 165.0
margin_right = 900.0
margin_bottom = 215.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 0.490196, 0.976471, 1, 1 )
custom_fonts/font = ExtResource( 9 )
text = "test"
autowrap = true
script = ExtResource( 5 )

[node name="StatWater" type="Label" parent="N/M/V"]
margin_top = 235.0
margin_right = 900.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 0.0313726, 0.560784, 0.560784, 1 )
custom_fonts/font = ExtResource( 9 )
text = "test"
autowrap = true
script = ExtResource( 6 )

[node name="StatFood" type="Label" parent="N/M/V"]
margin_top = 305.0
margin_right = 900.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "test"
autowrap = true
script = ExtResource( 8 )

[node name="StatVibrancy" type="Label" parent="N/M/V"]
margin_top = 375.0
margin_right = 900.0
margin_bottom = 425.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 0.815686, 0.192157, 0.176471, 1 )
custom_fonts/font = ExtResource( 9 )
text = "test"
autowrap = true
script = ExtResource( 7 )

[node name="Margin" type="Control" parent="N/M/V"]
margin_top = 445.0
margin_right = 900.0
margin_bottom = 465.0
rect_min_size = Vector2( 0, 20 )

[node name="H2" type="HBoxContainer" parent="N/M/V"]
margin_top = 485.0
margin_right = 900.0
margin_bottom = 535.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H2"]
margin_right = 161.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="StatsButton" type="Button" parent="N/M/V/H2"]
margin_left = 165.0
margin_right = 365.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Show Stats"
clip_text = true

[node name="MMargin" type="Control" parent="N/M/V/H2"]
margin_left = 369.0
margin_right = 530.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="N/M/V/H2"]
margin_left = 534.0
margin_right = 734.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 3 )
text = "Close"
clip_text = true

[node name="RMargin" type="Control" parent="N/M/V/H2"]
margin_left = 738.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[connection signal="button_up" from="N/M/V/H2/StatsButton" to="." method="_on_StatsButton_button_up"]
[connection signal="button_up" from="N/M/V/H2/CloseButton" to="." method="_on_CloseButton_button_up"]
